# UnityPackRust

./: .gitignore  .project  Cargo.toml
UnityPack/: Cargo.toml
UnityPack/include/: unitypack.h
UnityPack/src/: asset.rs  assetbundle.rs  binaryreader.rs  enums.rs  error.rs  lib.rs  object.rs  resources.rs  typetree.rs  unitymacros.rs  unitypack_c.rs
UnityPack/src/engine/: font.rs  mesh.rs  mod.rs  object.rs  text.rs  texture.rs
UnityPack/src/extras/: containers.rs  lzma.rs  mod.rs
UnityPackExample/: CMakeLists.txt
UnityPackExample/src/: main.c
include/: unitypack.h
src/: asset.rs  assetbundle.rs  binaryreader.rs  lib.rs  main.rs  object.rs  unitymacros.rs  unitypack_c.rs
