[package]
name = "unitypack"
version = "0.1.0"
authors = ["Istvan Fehervari <gooksl@gmail.com>"]

[lib]
name = "unitypack"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.23"
byteorder = "1"
lz4-compress = "0.1.1"
rust-lzma = "0.2.1"
lzma-sys = "0.1.8"
lazy_static = "0.2"
uuid = "0.5"
serde_json = "1.0"
odds = "0.2.25"